load("//src/libraries:defs.bzl", "netcoreapp_ref_assembly", "netcoreapp_impl_assembly")

exports_files([
    "ref/System.Diagnostics.Contracts.cs",
])

netcoreapp_ref_assembly(
    name = "ref_System.Diagnostics.Contracts",
    srcs = [
        "ref/System.Diagnostics.Contracts.cs",
    ],
    deps = [
        "//src/libraries:ref_System.Runtime",
    ],
)