load("//src/libraries:defs.bzl", "netcoreapp_ref_assembly", "netcoreapp_impl_assembly")

exports_files(["ref/System.Diagnostics.StackTrace.cs"])

netcoreapp_ref_assembly(
    name = "ref_System.Diagnostics.StackTrace",
    srcs = [
        "ref/System.Diagnostics.StackTrace.cs",
    ],
    deps = [
        "//src/libraries:ref_System.Runtime",
    ],
)
