load("//src/libraries:defs.bzl", "netcoreapp_ref_assembly", "netcoreapp_impl_assembly")

netcoreapp_ref_assembly(
    name = "ref_System.Diagnostics.Tracing",
    srcs = [
        "ref/System.Diagnostics.Tracing.cs",
        "ref/System.Diagnostics.Tracing.Counters.cs",
    ],
    deps = [
        "//src/libraries:ref_System.Runtime",
    ],
    allow_unsafe_blocks = True,
)
