load("//src/libraries:defs.bzl", "netcoreapp_ref_assembly", "netcoreapp_impl_assembly")

netcoreapp_ref_assembly(
    name = "ref_System.IO.FileSystem.DriveInfo",
    srcs = [
        "ref/System.IO.FileSystem.DriveInfo.cs",
    ],
    deps = [
        "//src/libraries:ref_System.Runtime",
    ],
)
