load("//src/libraries:defs.bzl", "netcoreapp_ref_assembly", "netcoreapp_impl_assembly")

netcoreapp_ref_assembly(
    name = "ref_System.IO.MemoryMappedFiles",
    srcs = [ "ref/System.IO.MemoryMappedFiles.cs" ],
    deps = [
        "//src/libraries:ref_System.Runtime",
        "//src/libraries/System.Runtime.InteropServices:ref_System.Runtime.InteropServices",
    ]
)