load("//src/libraries:defs.bzl", "netcoreapp_ref_assembly", "netcoreapp_impl_assembly")

netcoreapp_ref_assembly(
    name = "ref_System.Linq",
    srcs = [
        "ref/System.Linq.cs",
    ],
    deps = [
        "//src/libraries/System.Collections:ref_System.Collections",
        "//src/libraries:ref_System.Runtime",
    ],
)

netcoreapp_impl_assembly(
    name = "impl_System.Linq",
    srcs = [
        "src/System/Linq/AppendPrepend.SpeedOpt.cs",
        "src/System/Linq/Cast.SpeedOpt.cs",
        "src/System/Linq/Concat.SpeedOpt.cs",
        "src/System/Linq/DefaultIfEmpty.SpeedOpt.cs",
        "src/System/Linq/Distinct.SpeedOpt.cs",
        "src/System/Linq/Grouping.SpeedOpt.cs",
        "src/System/Linq/Iterator.SpeedOpt.cs",
        "src/System/Linq/Lookup.SpeedOpt.cs",
        "src/System/Linq/OfType.SpeedOpt.cs",
        "src/System/Linq/OrderedEnumerable.SpeedOpt.cs",
        "src/System/Linq/Range.SpeedOpt.cs",
        "src/System/Linq/Repeat.SpeedOpt.cs",
        "src/System/Linq/Reverse.SpeedOpt.cs",
        "src/System/Linq/Select.SpeedOpt.cs",
        "src/System/Linq/SelectMany.SpeedOpt.cs",
        "src/System/Linq/Skip.SpeedOpt.cs",
        "src/System/Linq/SkipTake.SpeedOpt.cs",
        "src/System/Linq/Take.SpeedOpt.cs",
        "src/System/Linq/Union.SpeedOpt.cs",
        "src/System/Linq/Where.SpeedOpt.cs",
        "src/System/Linq/Aggregate.cs",
        "src/System/Linq/AnyAll.cs",
        "src/System/Linq/AppendPrepend.cs",
        "src/System/Linq/Average.cs",
        "src/System/Linq/Cast.cs",
        "src/System/Linq/Chunk.cs",
        "src/System/Linq/Concat.cs",
        "src/System/Linq/Contains.cs",
        "src/System/Linq/AggregateBy.cs",
        "src/System/Linq/CountBy.cs",
        "src/System/Linq/Count.cs",
        "src/System/Linq/DebugView.cs",
        "src/System/Linq/DefaultIfEmpty.cs",
        "src/System/Linq/Distinct.cs",
        "src/System/Linq/ElementAt.cs",
        "src/System/Linq/Enumerable.cs",
        "src/System/Linq/Except.cs",
        "src/System/Linq/First.cs",
        "src/System/Linq/Grouping.cs",
        "src/System/Linq/GroupJoin.cs",
        "src/System/Linq/Index.cs",
        "src/System/Linq/Intersect.cs",
        "src/System/Linq/Iterator.cs",
        "src/System/Linq/Join.cs",
        "src/System/Linq/Last.cs",
        "src/System/Linq/Lookup.cs",
        "src/System/Linq/Max.cs",
        "src/System/Linq/MaxMin.cs",
        "src/System/Linq/Min.cs",
        "src/System/Linq/OfType.cs",
        "src/System/Linq/OrderBy.cs",
        "src/System/Linq/OrderedEnumerable.cs",
        "src/System/Linq/PartialArrayEnumerator.cs",
        "src/System/Linq/Range.cs",
        "src/System/Linq/Repeat.cs",
        "src/System/Linq/Reverse.cs",
        "src/System/Linq/SegmentedArrayBuilder.cs",
        "src/System/Linq/Select.cs",
        "src/System/Linq/SelectMany.cs",
        "src/System/Linq/SequenceEqual.cs",
        "src/System/Linq/Single.cs",
        "src/System/Linq/SingleLinkedNode.cs",
        "src/System/Linq/Skip.cs",
        "src/System/Linq/Sum.cs",
        "src/System/Linq/Take.cs",
        "src/System/Linq/ThrowHelper.cs",
        "src/System/Linq/ToCollection.cs",
        "src/System/Linq/Union.cs",
        "src/System/Linq/Utilities.cs",
        "src/System/Linq/Where.cs",
        "src/System/Linq/Zip.cs",
    ],
    deps = [
        "//src/libraries/System.Collections:ref_System.Collections",
        "//src/libraries/System.Memory:ref_System.Memory",
        "//src/libraries/System.Numerics.Vectors:ref_System.Numerics.Vectors",
        "//src/libraries:ref_System.Runtime",
        "//src/libraries/System.Runtime.InteropServices:ref_System.Runtime.InteropServices",
        "//src/libraries/System.Runtime.Intrinsics:ref_System.Runtime.Intrinsics",
    ],
    resx_file = "src/Resources/Strings.resx",
)
