
load("//src/libraries:defs.bzl",
    "netcoreapp_ref_assembly",
    "netcoreapp_impl_assembly",
)

exports_files([
    "ref/System.Numerics.Vectors.cs",
])

netcoreapp_ref_assembly(
    name = "ref_System.Numerics.Vectors",
    srcs = [
        "ref/System.Numerics.Vectors.cs",
    ],
    deps = [
        "//src/libraries:ref_System.Runtime",
    ],
    allow_unsafe_blocks = True,
)

netcoreapp_impl_assembly(
    name = "impl_System.Numerics.Vectors",
    deps = [
        "//src/libraries:ref_System.Private.CoreLib",
    ],
    generate_facades = True,
    facade_contract_assembly = ":ref_System.Numerics.Vectors",
    exclude_sr = True,
    allow_unsafe_blocks = True,
)