load("//src/libraries:defs.bzl", "netcoreapp_ref_assembly", "netcoreapp_impl_assembly")

netcoreapp_ref_assembly(
    name = "ref_System.ObjectModel",
    srcs = [
        "ref/System.ObjectModel.cs",
        "ref/System.ObjectModel.Forwards.cs",
    ],
    deps = [
        "//src/libraries:ref_System.Runtime",
        "//src/libraries/System.Collections:ref_System.Collections",
    ],
)
