load("//src/libraries:defs.bzl", "netcoreapp_ref_assembly", "netcoreapp_impl_assembly")

exports_files(["ref/System.Reflection.Emit.ILGeneration.cs"])

netcoreapp_ref_assembly(
    name = "ref_System.Reflection.Emit.ILGeneration",
    srcs = [
        "ref/System.Reflection.Emit.ILGeneration.cs",
    ],
    deps = [
        "//src/libraries:ref_System.Runtime",
        "//src/libraries/System.Runtime.InteropServices:ref_System.Runtime.InteropServices",
        "//src/libraries/System.Reflection.Primitives:ref_System.Reflection.Primitives",
        "//src/libraries/System.Diagnostics.StackTrace:ref_System.Diagnostics.StackTrace",
    ],
)
