load("//src/libraries:defs.bzl", "netcoreapp_ref_assembly", "netcoreapp_impl_assembly")

exports_files(
    ["ref/System.Reflection.Emit.Lightweight.cs"]
)

netcoreapp_ref_assembly(
    name = "ref_System.Reflection.Emit.Lightweight",
    srcs = [
        "ref/System.Reflection.Emit.Lightweight.cs",
    ],
    deps = [
        "//src/libraries:ref_System.Runtime",
        "//src/libraries/System.Reflection.Emit.ILGeneration:ref_System.Reflection.Emit.ILGeneration",
    ],
    allow_unsafe_blocks = True,
)